force-app/main/default/objects/LT_Shipment__c/LT_Shipment__c.object-meta.xml
<CustomObject>
    <description>Remessa - LogiTrack Operations 360.</description>
    <label>Remessa</label>
    <nameField>
        <displayFormat>RMS-{000000}</displayFormat>
        <label>Codigo da Remessa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remessas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>