force-app/main/default/objects/LT_Shipment__c/fields/LT_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Collected_Date__c</fullName>
    <description>Data/hora da coleta da remessa.</description>
    <label>Data da Coleta</label>
    <type>DateTime</type>
</CustomField>