force-app/main/default/objects/LT_Shipment__c/fields/LT_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Collection_Type__c</fullName>
    <description>Como a remessa entrou na malha LogiTrack.</description>
    <label>Tipo de Coleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coleta no Seller</fullName>
            </value>
            <value>
                <fullName>Coleta no DropOff</fullName>
            </value>
            <value>
                <fullName>C2C - Venda de Etiqueta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>