force-app/main/default/objects/LT_Shipment__c/fields/LT_Current_Holder__c.field-meta.xml
<CustomField>
    <fullName>LT_Current_Holder__c</fullName>
    <description>Quem esta com a remessa neste momento.</description>
    <label>Responsavel Atual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ponto de Coleta</fullName>
            </value>
            <value>
                <fullName>Motorista de Coleta</fullName>
            </value>
            <value>
                <fullName>Centro de Distribuicao</fullName>
            </value>
            <value>
                <fullName>Em Transferencia</fullName>
            </value>
            <value>
                <fullName>Base de Entrega</fullName>
            </value>
            <value>
                <fullName>Motorista Last Mile</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Devolvido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>