force-app/main/default/objects/LT_Shipment__c/fields/LT_Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>LT_Declared_Value__c</fullName>
    <description>Valor declarado do conteudo (base para ressarcimento em extravio).</description>
    <label>Valor Declarado</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>