force-app/main/default/objects/LT_Shipment__c/fields/LT_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Delivered_Date__c</fullName>
    <description>Data/hora da entrega ao destinatario.</description>
    <label>Data da Entrega</label>
    <type>DateTime</type>
</CustomField>