force-app/main/default/objects/LT_Shipment__c/fields/LT_Delivery_Attempts__c.field-meta.xml
<CustomField>
    <fullName>LT_Delivery_Attempts__c</fullName>
    <description>Numero de tentativas de entrega realizadas.</description>
    <label>Tentativas de Entrega</label>
    <defaultValue>0</defaultValue>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>