force-app/main/default/objects/LT_Shipment__c/fields/LT_Delivery_Base__c.field-meta.xml
<CustomField>
    <fullName>LT_Delivery_Base__c</fullName>
    <description>Base de entrega responsavel pela ultima milha.</description>
    <label>Base de Entrega</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Remessas (Base de Entrega)</relationshipLabel>
    <relationshipName>LT_Shipments_As_Base</relationshipName>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selecione uma Base de Entrega.</errorMessage>
        <filterItems>
            <field>LT_Logistics_Unit__c.Unit_Type__c</field>
            <operation>equals</operation>
            <value>Base de Entrega</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
</CustomField>