force-app/main/default/objects/LT_Shipment__c/fields/LT_Dest_City__c.field-meta.xml
<CustomField>
    <fullName>LT_Dest_City__c</fullName>
    <description>Cidade de destino da remessa.</description>
    <label>Cidade de Destino</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>