force-app/main/default/objects/LT_Shipment__c/fields/LT_Dest_District__c.field-meta.xml
<CustomField>
    <fullName>LT_Dest_District__c</fullName>
    <description>Bairro de entrega.</description>
    <label>Bairro</label>
    <type>Text</type>
    <length>80</length>
</CustomField>