force-app/main/default/objects/LT_Shipment__c/fields/LT_Dest_State__c.field-meta.xml
<CustomField>
    <fullName>LT_Dest_State__c</fullName>
    <description>Estado de destino da remessa.</description>
    <label>UF de Destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brazilian_States</valueSetName>
    </valueSet>
</CustomField>