force-app/main/default/objects/LT_Shipment__c/fields/LT_Dest_Street__c.field-meta.xml
<CustomField>
    <fullName>LT_Dest_Street__c</fullName>
    <description>Logradouro e numero de entrega.</description>
    <label>Endereco de Entrega</label>
    <type>Text</type>
    <length>255</length>
</CustomField>