force-app/main/default/objects/LT_Shipment__c/fields/LT_Dest_ZIP__c.field-meta.xml
<CustomField>
    <fullName>LT_Dest_ZIP__c</fullName>
    <description>CEP de destino (formato 00000-000).</description>
    <inlineHelpText>Informe o CEP no formato 00000-000.</inlineHelpText>
    <label>CEP de Destino</label>
    <required>true</required>
    <type>Text</type>
    <length>9</length>
</CustomField>