force-app/main/default/objects/LT_Shipment__c/fields/LT_Event_Count__c.field-meta.xml
<CustomField>
    <fullName>LT_Event_Count__c</fullName>
    <description>Quantidade de eventos de rastreamento da remessa.</description>
    <label>Qtd. de Eventos</label>
    <summaryForeignKey>LT_Tracking_Event__c.LT_Shipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>