force-app/main/default/objects/LT_Shipment__c/fields/LT_Holder_Text__c.field-meta.xml
<CustomField>
    <fullName>LT_Holder_Text__c</fullName>
    <description>Versao texto do Responsavel Atual (usada em automacoes).</description>
    <label>Responsavel Atual (texto)</label>
    <formula>TEXT(LT_Current_Holder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>