force-app/main/default/objects/LT_Shipment__c/fields/LT_Is_Delivered__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Delivered__c</fullName>
    <description>Verdadeiro quando a remessa esta com status Entregue.</description>
    <label>Entregue</label>
    <formula>ISPICKVAL(LT_Status__c, "Entregue")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>