force-app/main/default/objects/LT_Shipment__c/fields/LT_Is_Terminal__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Terminal__c</fullName>
    <description>Verdadeiro quando a remessa chegou a um status final.</description>
    <label>Fluxo Encerrado</label>
    <formula>OR(ISPICKVAL(LT_Status__c, "Entregue"), ISPICKVAL(LT_Status__c, "Devolvido ao Remetente"), ISPICKVAL(LT_Status__c, "Extraviado"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>