force-app/main/default/objects/LT_Shipment__c/fields/LT_Last_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Last_Event_Date__c</fullName>
    <description>Data/hora do evento de rastreamento mais recente.</description>
    <label>Ultimo Evento em</label>
    <summarizedField>LT_Tracking_Event__c.LT_Event_DateTime__c</summarizedField>
    <summaryForeignKey>LT_Tracking_Event__c.LT_Shipment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>