force-app/main/default/objects/LT_Shipment__c/fields/LT_Last_Mile_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Last_Mile_Driver__c</fullName>
    <description>Motorista responsavel pela entrega final.</description>
    <label>Motorista Last Mile</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Remessas Entregues</relationshipLabel>
    <relationshipName>LT_LastMile_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>