force-app/main/default/objects/LT_Shipment__c/fields/LT_Origin_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>LT_Origin_Marketplace__c</fullName>
    <description>Canal / marketplace que originou o pedido.</description>
    <label>Marketplace de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shopee</fullName>
            </value>
            <value>
                <fullName>Mercado Livre</fullName>
            </value>
            <value>
                <fullName>Shein</fullName>
            </value>
            <value>
                <fullName>TikTok Shop</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>AliExpress</fullName>
            </value>
            <value>
                <fullName>Magalu</fullName>
            </value>
            <value>
                <fullName>Loja Propria</fullName>
            </value>
            <value>
                <fullName>C2C - Venda de Etiqueta</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>