force-app/main/default/objects/LT_Shipment__c/fields/LT_Package_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Package_Type__c</fullName>
    <description>Formato fisico da remessa.</description>
    <label>Tipo de Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacote</fullName>
                <default>true</default>
                <label>Pacote</label>
            </value>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>Caixa</fullName>
            </value>
            <value>
                <fullName>Volume Grande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>