force-app/main/default/objects/LT_Shipment__c/fields/LT_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Posted_Date__c</fullName>
    <description>Data/hora em que a etiqueta foi gerada / o pedido foi postado.</description>
    <label>Data de Postagem</label>
    <type>DateTime</type>
</CustomField>