force-app/main/default/objects/LT_Shipment__c/fields/LT_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>LT_Recipient_Name__c</fullName>
    <description>Nome do destinatario.</description>
    <label>Destinatario</label>
    <required>true</required>
    <type>Text</type>
    <length>120</length>
</CustomField>