force-app/main/default/objects/LT_Shipment__c/fields/LT_Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>LT_Recipient_Phone__c</fullName>
    <description>Telefone de contato do destinatario.</description>
    <label>Telefone do Destinatario</label>
    <type>Phone</type>
</CustomField>