force-app/main/default/objects/LT_Shipment__c/fields/LT_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>LT_Sender_Name__c</fullName>
    <description>Nome do remetente.</description>
    <label>Remetente</label>
    <type>Text</type>
    <length>120</length>
</CustomField>