force-app/main/default/objects/LT_Shipment__c/fields/LT_Shipper__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper__c</fullName>
    <description>Embarcador (cliente) dono da remessa.</description>
    <label>Embarcador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Remessas</relationshipLabel>
    <relationshipName>LT_Shipments</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A remessa deve pertencer a uma conta do tipo Embarcador.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>LT_Shipper</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>