force-app/main/default/objects/LT_Shipment__c/fields/LT_SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>LT_SLA_Deadline__c</fullName>
    <description>Data limite de entrega acordada.</description>
    <label>Prazo de Entrega (SLA)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>