force-app/main/default/objects/LT_Shipment__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Etapa atual da remessa no fluxo operacional.</description>
    <inlineHelpText>Atualizado automaticamente pelos eventos de rastreamento.</inlineHelpText>
    <label>Status da Remessa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etiqueta Gerada</fullName>
                <default>true</default>
                <label>Etiqueta Gerada</label>
            </value>
            <value>
                <fullName>Coletado</fullName>
            </value>
            <value>
                <fullName>Em Triagem no SC</fullName>
            </value>
            <value>
                <fullName>Em Transferencia</fullName>
            </value>
            <value>
                <fullName>Recebido na Base</fullName>
            </value>
            <value>
                <fullName>Em Triagem na Base</fullName>
            </value>
            <value>
                <fullName>Em Rota de Entrega</fullName>
            </value>
            <value>
                <fullName>Tentativa de Entrega</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Retido</fullName>
            </value>
            <value>
                <fullName>Sem Movimentacao</fullName>
            </value>
            <value>
                <fullName>Devolvido ao Remetente</fullName>
            </value>
            <value>
                <fullName>Extraviado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>