force-app/main/default/objects/LT_Shipment__c/fields/LT_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>LT_Status_Text__c</fullName>
    <description>Versao texto do Status da Remessa (usada em automacoes e relatorios).</description>
    <label>Status (texto)</label>
    <formula>TEXT(LT_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>