force-app/main/default/objects/LT_Shipment__c/fields/LT_Tracking_Code__c.field-meta.xml
<CustomField>
    <fullName>LT_Tracking_Code__c</fullName>
    <description>Codigo unico de rastreio da remessa (visivel ao destinatario).</description>
    <inlineHelpText>Codigo unico da remessa, ex.: LT771234567BR.</inlineHelpText>
    <label>Codigo de Rastreio</label>
    <required>true</required>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>