force-app/main/default/objects/LT_Shipment__c/fields/LT_Value_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>LT_Value_Reimbursed__c</fullName>
    <description>Marcado quando o embarcador foi ressarcido por extravio.</description>
    <label>Valor Ressarcido</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>