force-app/main/default/objects/LT_Shipment__c/fields/LT_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>LT_Weight_Kg__c</fullName>
    <description>Peso da remessa em quilogramas.</description>
    <label>Peso (kg)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>3</scale>
</CustomField>