force-app/main/default/objects/LT_Shipment__c/validationRules/LT_Shipment_Delivered_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Shipment_Delivered_Requires_Date</fullName>
    <active>true</active>
    <description>Remessa Entregue precisa da data da entrega.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Entregue"), ISBLANK(LT_Delivered_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Delivered_Date__c</errorDisplayField>
    <errorMessage>Informe a Data da Entrega ao marcar a remessa como Entregue.</errorMessage>
</ValidationRule>