force-app/main/default/objects/LT_Shipment__c/validationRules/LT_Shipment_Route_Requires_Driver.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Shipment_Route_Requires_Driver</fullName>
    <active>true</active>
    <description>Remessa Em Rota de Entrega precisa de motorista Last Mile.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Em Rota de Entrega"), ISBLANK(LT_Last_Mile_Driver__c))</errorConditionFormula>
    <errorDisplayField>LT_Last_Mile_Driver__c</errorDisplayField>
    <errorMessage>Defina o Motorista Last Mile ao colocar a remessa Em Rota de Entrega.</errorMessage>
</ValidationRule>