force-app/main/default/objects/LT_Shipment__c/validationRules/LT_Shipment_SLA_After_Posted.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Shipment_SLA_After_Posted</fullName>
    <active>true</active>
    <description>O prazo de entrega nao pode ser anterior a data de postagem.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_Posted_Date__c)), NOT(ISBLANK(LT_SLA_Deadline__c)), LT_SLA_Deadline__c &lt; DATEVALUE(LT_Posted_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_SLA_Deadline__c</errorDisplayField>
    <errorMessage>O Prazo de Entrega (SLA) nao pode ser anterior a Data de Postagem.</errorMessage>
</ValidationRule>