force-app/main/default/objects/LT_Shipment__c/validationRules/LT_Shipment_Weight_Value_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Shipment_Weight_Value_Positive</fullName>
    <active>true</active>
    <description>Peso e valor declarado nao podem ser negativos.</description>
    <errorConditionFormula>OR(LT_Weight_Kg__c &lt; 0, LT_Declared_Value__c &lt; 0)</errorConditionFormula>
    <errorMessage>Peso e valor declarado nao podem ser negativos.</errorMessage>
</ValidationRule>