force-app/main/default/objects/LT_Shipment__c/validationRules/LT_Shipment_ZIP_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Shipment_ZIP_Format</fullName>
    <active>true</active>
    <description>Valida a mascara do CEP (00000-000).</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_Dest_ZIP__c)), NOT(REGEX(LT_Dest_ZIP__c, "^[0-9]{5}-[0-9]{3}$")))</errorConditionFormula>
    <errorDisplayField>LT_Dest_ZIP__c</errorDisplayField>
    <errorMessage>Informe o CEP no formato 00000-000.</errorMessage>
</ValidationRule>