force-app/main/default/objects/LT_Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LT_Tracking_Code__c</columns>
    <columns>LT_Shipper__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Dest_City__c</columns>
    <columns>LT_Dest_State__c</columns>
    <columns>LT_SLA_Deadline__c</columns>
    <columns>LT_Delivery_Base__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>