force-app/main/default/objects/LT_Shipment__c/listViews/Atrasadas.listView-meta.xml
<ListView>
    <fullName>Atrasadas</fullName>
    <columns>LT_Tracking_Code__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Delivery_Base__c</columns>
    <columns>LT_Last_Mile_Driver__c</columns>
    <columns>LT_SLA_Deadline__c</columns>
    <columns>LT_Days_In_Transit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Is_Late__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Em Atraso</label>
</ListView>