force-app/main/default/objects/LT_Shipment__c/listViews/Em_Transito.listView-meta.xml
<ListView>
    <fullName>Em_Transito</fullName>
    <columns>LT_Tracking_Code__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Current_Holder__c</columns>
    <columns>LT_Dest_City__c</columns>
    <columns>LT_SLA_Deadline__c</columns>
    <columns>LT_Hours_Without_Movement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Is_Terminal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Em Transito</label>
</ListView>